--- a/style.css
+++ b/style.css
@@ -11,9 +11,6 @@ h1 {
     top: 10px;
     position: absolute; /* posicion absoluta tiene como caracteristicas */
     padding:10px;
-    border: 3px;     /* solo son para vizualizar los movimientos*/
-    border-style:dashed;
-    border-color: #ba8ae7; 
 }
 /* ID se representa con el #*/
 #left-container 
@@ -25,18 +22,79 @@ h1 {
 {
     right: 15px;
 }
+
 .plant-holder{ /*contenederores de las plantas*/
     position: relative;  
     height: 13%;
     left: -10px;
-    border: 3px;     /* solo son para vizualizar los movimientos*/
-    border-style:dashed;
-    border-color: #dee78a;
 }
+
 .plant{ /*plantas*/
     position:absolute;
     /*tamaño de la imagen*/
-    max-width: 100%;  /*150*/
-    max-height: 100%;
+    max-width: 150%;  /*150*/
+    max-height: 150%;
     z-index: 2;
+}
+
+.jar-walls{
+    height: 80%;
+    width: 60%;
+    background-color: #bddad6;
+    border-radius: 1rem;
+    position: absolute;
+    left: 20%;
+    bottom: 0.5;
+    opacity: 0.5;
+}
+
+.jar-top {
+    height: 5%;
+    width: 50%;
+    background-color: #bddad6;
+    position: absolute;
+    left: 25%;
+    bottom: 86%;
+    opacity: 0.5;
+
+}
+
+.dirt{
+    position: absolute;
+    height: 7%;
+    width: 60% ;
+    left: 20%;
+    bottom: 0.5%;
+    border: 3px;     /* solo son para vizualizar los movimientos*/ 
+    background-color: #744f43;
+    border-radius: 0rem 0rem 1rem 1rem;
+    opacity: 0.5;
+    z-index: -1;
+
+}
+.jar-glossy-long
+{
+    position: absolute;
+    height: 20%;
+    width: 2% ;
+    left: 10%;
+    bottom: 10%;
+    background-color: #c4e2de;
+    border-radius: 1rem 1rem 1rem 1rem;
+    border: 3px;      
+    border-style:dashed;
+    border-color: #ba8ae7;
+
+}
+.jar-glossy-short{
+    position: absolute;
+    height: 5%;
+    width: 2% ;
+    left: 10%;
+    bottom: 35%;
+    background-color: #c4e2de;
+    border-radius: 1rem 1rem 1rem 1rem;
+    border: 3px;      
+    border-style:dashed;
+    border-color: #ba8ae7;
 }
