--- a/style.css
+++ b/style.css
@@ -1,15 +1,16 @@
 /*Estilos del terrarium*/
 h1 {
-   color:#92df9e;
+   color:#b3e2ba;
    text-align: center;
+   font-family: 'Broadway'; /* tipo de letra*/
 }
 /*.Crear clase código*/
 .container{     
     background-color: #eee;
     width: 15%;
+    position: absolute; /* posicion absoluta tiene como caracteristicas */
     height: 100%;
     top: 10px;
-    position: absolute; /* posicion absoluta tiene como caracteristicas */
     padding:10px;
 }
 /* ID se representa con el #*/
@@ -20,7 +21,7 @@ h1 {
 /* ID se representa con el #*/
 #right-container 
 {
-    right: 15px;
+    right: 0px;
 }
 
 .plant-holder{ /*contenederores de las plantas*/
@@ -32,8 +33,8 @@ h1 {
 .plant{ /*plantas*/
     position:absolute;
     /*tamaño de la imagen*/
-    max-width: 150%;  /*150*/
-    max-height: 150%;
+    max-width: 100%;  /*150*/
+    max-height: 100%;
     z-index: 2;
 }
 
@@ -44,19 +45,30 @@ h1 {
     border-radius: 1rem;
     position: absolute;
     left: 20%;
-    bottom: 0.5;
+    bottom: 0.5%;
     opacity: 0.5;
+    z-index: 1;
 }
 
 .jar-top {
     height: 5%;
     width: 50%;
-    background-color: #bddad6;
+    background-color: #9acacc;
     position: absolute;
     left: 25%;
-    bottom: 86%;
+    bottom: 80.5%;
     opacity: 0.5;
 
+}
+
+.jar-bottom {
+    width: 50%;
+    height: 2%;
+    background-color: #9acacc;
+    position: absolute;
+    bottom: -1.5%;
+    left: 25%;
+    opacity:0.7;
 }
 
 .dirt{
@@ -66,7 +78,7 @@ h1 {
     left: 20%;
     bottom: 0.5%;
     border: 3px;     /* solo son para vizualizar los movimientos*/ 
-    background-color: #744f43;
+    background-color: #32e622;
     border-radius: 0rem 0rem 1rem 1rem;
     opacity: 0.5;
     z-index: -1;
@@ -77,24 +89,20 @@ h1 {
     position: absolute;
     height: 20%;
     width: 2% ;
-    left: 10%;
-    bottom: 10%;
-    background-color: #c4e2de;
+    left: 4%;
+    bottom: 28%;
+    background-color: #ffffff;
     border-radius: 1rem 1rem 1rem 1rem;
-    border: 3px;      
-    border-style:dashed;
-    border-color: #ba8ae7;
+    opacity: 1;
 
 }
 .jar-glossy-short{
     position: absolute;
     height: 5%;
     width: 2% ;
-    left: 10%;
-    bottom: 35%;
-    background-color: #c4e2de;
+    left: 4%;
+    bottom: 50%;
+    background-color:#ffffff;
     border-radius: 1rem 1rem 1rem 1rem;
-    border: 3px;      
-    border-style:dashed;
-    border-color: #ba8ae7;
+
 }
